--- a/project/project.tex
+++ b/project/project.tex
@@ -311,7 +311,9 @@ It was, in fact, this question that motivated us to pursue this topic in the fir
 
 \subsection{Implementation}
 
-First, we take our MSE-minimized predictions from the previous section, and we assume that they are noisy. In particular, we assume that the true final score students will receive is normally distributed around the prediction we made. \\
+In this section, we describe the implementation of Fixed-Cutoff Gaussian Probability Estimation (FCPGE), a method for estimating the probabilities of getting an A, B, or C, that relies heavily on the linear regression methods discussed earlier in the paper. We created it initially as a benchmark against which to verify the successful performance of ordered probit/logit; it turned out to be an interesting algorithm in its own right.\\
+
+First, we take our MSE-minimized predictions from the section on linear regression, and we assume that they are noisy. In particular, we assume that the true final score students will receive is normally distributed around the prediction we made. \\
 
 We don't yet know what the variance of this gaussian noise is; however, we can estimate it, by further assuming that the variance of this gaussian noise is independent of what our prediction for the score is. Then, we can produce an estimate $\hat{\sigma}$ of the variance of the distribution in terms of our predictions $\hat{y}^{(i)}$ and the true values $y^{i}$ in the training and validation sets by using the formula:
 
@@ -319,13 +321,25 @@ $$\hat{\sigma}^2 = \frac{\sum_i^n (\hat{y^{(i)}} - y^{(i)})^2}{n}$$
 
 Put more simply, we are taking the observed variance of our prediction's error in the training and validation sets, and using that observed variance as our estimated variance for the Gaussian noise around our predictions. \\
 
-Now that we have a probability distribution over the possible numerical grades that our hypothetical student will get, we can turn those probabilities over letter grades via the cutoffs we used for letter-grade prediction. In other words, assuming our B/C cutoff (the $20^{\textrm{th}}$-percentile score) is $\mu_B$ and our A/B cutoff (the $60^{\textrm{th}}$-percentile score) is $\mu_A$, we estimate that the probability that the aforementioned student gets an A, a B, or a C is given by the following formulas:
+Now that we have a probability distribution over the possible numerical grades that our hypothetical student will get, we can turn those probabilities over letter grades via the cutoffs we used for letter-grade prediction in the linear regression section. In other words, assuming our B/C cutoff (the $20^{\textrm{th}}$-percentile score) is $\mu_B$ and our A/B cutoff (the $60^{\textrm{th}}$-percentile score) is $\mu_A$, we estimate that the probability that the aforementioned student gets an A, a B, or a C is given by the following formulas:
 
-$$P(y = A) = \Phi(\frac{\hat{y}-\mu_A}{\hat{\sigma}}
+$$P(y = A) = \Phi(\frac{\hat{y}-\mu_A}{\hat{\sigma}} $$
 $$P(y = B) = \Phi(\frac{\mu_A-\hat{y}}{\hat{\sigma}}) - \Phi(\frac{\mu_B-\hat{y}}{\hat{\sigma}})$$
 $$P(y = C) = \Phi(\frac{\mu_B-\hat{y}}{\hat{\sigma}})$$
 
+\section{Results}
 
+Fixed-Cutoff Gaussian Probability Estimation turned out to be a very successful method for coming up with probability distributions over letter grades. It did well enough to outperform the more established Ordered Logit and Probit methods, with a few caveats. \\
+
+For a detailed comparison of FCGPE with Ordered Probit, see Figure xx. % TODO figure name
+ Note that FCPGE has a consistently lower negative log likelihood, suggesting that it is making the more accurate predictions, until we hit eight or nine assignments, at which point FCPGE's negative log likelihood suddenly spikes to infinity. This is because unlike Ordered Probit, FCPGE uses fixed cutoffs. In other words, FCPGE assumes that there is a 100\% chance that the cutoffs will be exactly where they were in the average of the previous semesters. When there are few enough assignments included, this plainly false assumption doesn't cause any problems, because there's enough uncertainty in the final grade to give the predictions near the grade cutoffs sufficiently cautious. When eight or nine assignments are included, however, FCGPE suddenly makes predictions with extremely high confidence, and the false assumption that the cutoffs are precisely known dominates considerations. A single highly overconfident prediction, made on the assumption that the cutoff will be where it was last year, is enough to make the negative log likelihood reach extreme heights. \\
+
+To solve this problem, the next step would likely be to get many samples of where the cutoffs were in past semesters, to get a sense of what the probability distribution over the cutoff locations might look like. However, to do this accurately, we'd need access to substantially more semester data than we had. \\
+
+FCGPE's edge over Ordered Probit appears to mostly manifest itself in more aggressive predictions, which are on average warranted (until nine assignments, when they weren't). See Figure xx % TODO figure name
+for a comparison of the aggressiveness of predictions made by Ordered Probit and by FCGPE, compared to how often those predictions should have been right. From the figure, it is apparent that FCPGE (before it collapses) makes predictions whose probabilities are more well-matched to the actual rate of occurrence of the predicted event than Ordered Probit (in other words, the things that FCPGE predicted would happen 80\% of the time tended to happen about 80\% of the time, whereas the things that Ordered Probit predicted would happen 80\% of the time tended to happen a little more often than that). 
+
+We also tried FCPGE, but with the assumption that true final score would be logistically, not normally, distributed about the predicted final scores. We found that this led to predictions that were much too timid, and a negative log likelihood that was substantially less impressive than either the original version of FCPGE, or either of Ordered Probit or Logit.
 
 \section{Ordered Logit/Probit}
 
